--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -120,6 +120,12 @@ header.masthead h1 {
   opacity: 0.3;
 }
 
+.formulario{
+  width: 600px;
+  height: 500px;
+  padding-top: 10px;
+}
+
 footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
