--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -47,6 +47,12 @@ header.masthead .overlay {
   opacity: 0.3;
 }
 
+#logo{
+  width: 160px; 
+  margin-bottom: -50px;
+  margin-top: -10px;
+}
+
 header.masthead h1 {
   font-size: 2rem;
 }
