--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -142,6 +142,10 @@ header.masthead h1 {
   padding-top: 10px;
 }
 
+.parceiras{
+  height: 80px;
+}
+
 footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
