--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -109,7 +109,7 @@ header.masthead h1 {
 }
 
 .testimonials .testimonial-item {
-  max-width: 30rem;
+  max-width: 20rem;
 }
 
 .testimonials .testimonial-item img {
@@ -149,4 +149,15 @@ header.masthead h1 {
 footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+/* ------ live.html ------- */
+#live{
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  color: rgba(239, 237, 240);
+}
+
+#live b{
+  color: rgba(234, 188, 247);
 }
