--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -57,13 +57,18 @@ header.masthead .overlay {
 }
 
 #logo{
-  width: 160px; 
+  width: 140px; 
   margin-bottom: -50px;
   margin-top: -10px;
 }
 
 header.masthead h1 {
   font-size: 2rem;
+}
+
+.btn{
+  background: #5F4A97;
+  color: white;
 }
 
 @media (min-width: 768px) {
@@ -77,6 +82,10 @@ header.masthead h1 {
 
 }
 
+.showcase{
+  text-align: center;
+}
+
 .showcase .showcase-text {
   padding: 3rem;
 }
@@ -84,6 +93,14 @@ header.masthead h1 {
 .showcase .showcase-img {
   min-height: 30rem;
   background-size: cover;
+}
+
+.showcase h2{
+  color: #3567AC;
+}
+
+.showcase li{
+  text-decoration: none;
 }
 
 @media (min-width: 768px) {
@@ -103,6 +120,10 @@ header.masthead h1 {
 
 .features-icons .features-icons-item .features-icons-icon {
   height: 7rem;
+}
+
+.features-icons h2{
+  color: #3567AC;
 }
 
 .features-icons .features-icons-item .features-icons-icon i {
@@ -125,6 +146,10 @@ header.masthead h1 {
 .testimonials .testimonial-item img {
   max-width: 12rem;
   box-shadow: 0px 5px 5px 0px #adb5bd;
+}
+
+.testimonials h2{
+  color: #3567AC;
 }
 
 .call-to-action {
@@ -152,6 +177,10 @@ header.masthead h1 {
   padding-top: 10px;
 }
 
+#parceiras h2{
+  color: #3567AC;
+}
+
 .parceiras{
   height: 80px;
 }
@@ -159,6 +188,11 @@ header.masthead h1 {
 footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+footer img{
+  width: 56px;
+  height: 56px;
 }
 
 /* ------ live.html ------- */
