--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -58,7 +58,7 @@ header.masthead .overlay {
 
 #logo{
   width: 140px; 
-  margin-bottom: -50px;
+  margin-bottom: -45px;
   margin-top: -10px;
 }
 
@@ -99,8 +99,9 @@ header.masthead h1 {
   color: #3567AC;
 }
 
-.showcase li{
-  text-decoration: none;
+#missao-itens{
+  text-align: left;
+  padding-left: 8%;
 }
 
 @media (min-width: 768px) {
